fix: push app name 1px down to improve visual alignment

--- a/src/components/Toolbar/styles/AppLogo.module.css
+++ b/src/components/Toolbar/styles/AppLogo.module.css
@@ -5,3 +5,6 @@
     gap:  var(--spacers-dp8);
     font-size: 14px;
 }
+.appName {
+    padding-top: 1px;
+}
